crates/ladder_types/tests/ui/generated/should_fail/test__typenum_ladder__R3_minus_R1.rs

use ladder_types::typenum_ladder::*;

fn main() {
   let _ = R3::new() - R1::new();
}
